--- a/contents/JS/JS.html
+++ b/contents/JS/JS.html
@@ -2906,11 +2906,11 @@ for (let i of itemList) {
 
 
         <!-- Ending of Content -->
-        <hr>
+        <!-- <hr>
         <footer>
           &copy; Jingwora All rights reserved.
-        </footer>
-</body>
+        </footer> -->
+   </body>
 </html>
 
 
