--- a/contents/JS/JS.html
+++ b/contents/JS/JS.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/contents_resources/styles/mainStyles.css">
-        <title>JS</title>
-        <link rel="icon" type="image/png" href="/contents_resources/icons/logo_js.png">
-
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1" />
+      <meta name="description" content="JavaScript Essence" />
+      <meta name="keywards" content="JavaScript, JS" />
+      <meta name="author" content="Kritdikoon Woraitthinan" />
+      <title>JavaScript Essence</title>
+      <link rel="stylesheet" href="/contents_resources/styles/mainStyles.css">
+      <link rel="icon" type="image/png" href="/contents_resources/icons/logo_js.png">
     </head>
+
     <body>
+      <!-- NAVNIGATION BAR -->
       <div class="navbar">
           <a class="main" href="#navh00"> <img src ="/contents_resources/icons/logo_js.png" width="15"> </a>
           <a href="#nav01">INTRO</a>
@@ -2148,7 +2152,7 @@ Set Date methods let you set date values (years, months, days, hours, minutes, s
 
   <h3>Self-Invoking Functions</h3>
   <p>Function expressions can be made "self-invoking".</p>
-  <textarea style="ta2">
+  <textarea class="ta2">
   (function () {
     var x = console.log("Hello!"); 
   })();
