--- a/contents/JS/JS.html
+++ b/contents/JS/JS.html
@@ -2907,13 +2907,15 @@ for (let i of itemList) {
   <button onclick="sortYear(v1110)">Sort Year</button>
    <p id="1110" style="color:#649d66"></p>
 
+        <!-- Script -->
+        <script src="/contents/JS/main.js"></script>
 
 
         <!-- Ending of Content -->
-        <!-- <hr>
+        <hr>
         <footer>
           &copy; Jingwora All rights reserved.
-        </footer> -->
+        </footer>
    </body>
 </html>
 
