Update contents add az900

--- a/contents.html
+++ b/contents.html
@@ -90,6 +90,11 @@
 														<td>Collection of Object detection methods.</td>
 														<td><a href="contents/articles/Object_Detection.html" target="_blank">Open</a></td>
 													</tr>
+													<tr>
+														<td>Azure Fundamentals</td>
+														<td>Packed contents to prepare for AZ-900 Exam.</td>
+														<td><a href="contents/articles/Microsoft Certified Azure Fundamentals.html" target="_blank">Open</a></td>
+													</tr>
 												</tbody>
 											</table>
 										</div>
