--- a/contents.html
+++ b/contents.html
@@ -95,6 +95,13 @@
 														<td>Packed contents to prepare for AZ-900 Exam.</td>
 														<td><a href="contents/articles/Microsoft Certified Azure Fundamentals.html" target="_blank">Open</a></td>
 													</tr>
+													<tr>
+														<td>TensorFlow Developer Certificate
+														</td>
+														<td>Packed contents to prepare for TensorFlow Developer Certificate
+															Exam.</td>
+														<td><a href="contents/articles/TensorFlow Developer Certificate.html" target="_blank">Open</a></td>
+													</tr>
 												</tbody>
 											</table>
 										</div>
