--- a/contents.html
+++ b/contents.html
@@ -91,6 +91,11 @@
 														<td><a href="contents/articles/Object_Detection.html" target="_blank">Open</a></td>
 													</tr>
 													<tr>
+														<td>Similarity and Distance</td>
+														<td>Wrap-up of Similarity and Distance</td>
+														<td><a href="contents/articles/Similarity-and-Distance.html" target="_blank">Open</a></td>
+													</tr>
+													<tr>
 														<td>Azure Fundamentals</td>
 														<td>Packed contents to prepare for AZ-900 Exam.</td>
 														<td><a href="contents/articles/Microsoft Certified Azure Fundamentals.html" target="_blank">Open</a></td>
