--- a/contents.html
+++ b/contents.html
@@ -87,7 +87,7 @@
 													</tr>
 													<tr>
 														<td>Object Detection Summary</td>
-														<td>Collection of Object detection methods.</td>
+														<td>Wrap-up of Object detection methods.</td>
 														<td><a href="contents/articles/Object_Detection.html" target="_blank">Open</a></td>
 													</tr>
 													<tr>
@@ -97,13 +97,13 @@
 													</tr>
 													<tr>
 														<td>Azure Fundamentals</td>
-														<td>Packed contents to prepare for AZ-900 Exam.</td>
+														<td>Wrap-up to prepare for AZ-900 Exam.</td>
 														<td><a href="contents/articles/Microsoft Certified Azure Fundamentals.html" target="_blank">Open</a></td>
 													</tr>
 													<tr>
 														<td>TensorFlow Developer Certificate
 														</td>
-														<td>Packed contents to prepare for TensorFlow Developer Certificate
+														<td>Wrap-up to prepare for TensorFlow Developer Certificate
 															Exam.</td>
 														<td><a href="contents/articles/TensorFlow Developer Certificate.html" target="_blank">Open</a></td>
 													</tr>
