--- a/contents.html
+++ b/contents.html
@@ -91,9 +91,9 @@
 														<td><a href="contents/articles/Object_Detection.html" target="_blank">Open</a></td>
 													</tr>
 													<tr>
-														<td>Similarity and Distance</td>
-														<td>Wrap-up of Similarity and Distance</td>
-														<td><a href="contents/articles/Similarity-and-Distance.html" target="_blank">Open</a></td>
+														<td>Similarity and Distance Algorithms</td>
+														<td>Wrap-up of Similarity and Distance Algorithms</td>
+														<td><a href="contents/articles/Similarity-and-Distance-algorithms.html" target="_blank">Open</a></td>
 													</tr>
 													<tr>
 														<td>Azure Fundamentals</td>
