Add google analytics header1

--- a/contacts.html
+++ b/contacts.html
@@ -10,6 +10,16 @@
 		<link rel="icon" 
 		type="image/png" 
 		href="images/J_favicon/favicon.ico">
+
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-HDYFX99SK4"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'G-HDYFX99SK4');
+		</script>
 	</head>
 	<body class="is-preload">
 
