Add Google Analytics2

--- a/contents/HTML/HTML.html
+++ b/contents/HTML/HTML.html
@@ -10,6 +10,16 @@
         <meta name="keywards" content="HTML, coding, HTML summary">
         <meta name="author" content="Kritdikoon Woraitthinan">
 
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-HDYFX99SK4"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'G-HDYFX99SK4');
+        </script>
+
         <style>
           .sub{
             text-align: center;
