--- a/contents/JS/JS.html
+++ b/contents/JS/JS.html
@@ -9,6 +9,17 @@
       <title>JavaScript Essence</title>
       <link rel="stylesheet" href="/contents_resources/styles/mainStyles.css">
       <link rel="icon" type="image/png" href="/contents_resources/icons/logo_js.png">
+
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-HDYFX99SK4"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-HDYFX99SK4');
+      </script>
+
     </head>
 
     <body>
