--- a/contents/SQL/SQL.html
+++ b/contents/SQL/SQL.html
@@ -11,6 +11,21 @@
     <meta http-equiv="Content-Language" content="en" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF8" />
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-HDYFX99SK4"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-HDYFX99SK4");
+    </script>
+
     <link
       rel="stylesheet"
       type="text/css"
