updated index greeting

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           data-rotate='[ "a Data Analyst.", "a Data Scientist.", "a Data Engineer.", "a Web Developer.", "just a Data-Driven Problem Solver." ]'></span>
       </h2>
       <hr style="border: 1px solid #00356B;">
-      <h2 class="typing">Nice to meet everyone.</h2>
+      <h2 class="typing">Delighted to meet you.</h2>
       <br><br>
 
       <div style="display: flex;
