Update content visual studio git

--- a/contents.html
+++ b/contents.html
@@ -224,7 +224,7 @@
 													</tr>
 													<tr>
 														<td>Visual Studio + Repos Git</td>
-														<td>Tutorial for Visual Studio with Source Code management.</td>
+														<td>Tutorial for Visual Studio with Source Control.</td>
 														<td><a href="https://docs.microsoft.com/en-us/azure/devops/repos/git/gitworkflow?view=azure-devops" target="_blank">Link</a></td>
 													</tr>
 												</tbody>
