content update digit recognition

--- a/projects.html
+++ b/projects.html
@@ -70,6 +70,14 @@
 
 								<hr>
 								<h2>AI Solutions</h2>
+
+								<h3>Image Recognition: CNN</h3>
+								<p>
+									Objectives: Hangwritten digits recognition. 
+								 </p> 
+								<a href="/contents/projects/digits-recognition/ai.html" target="_blank">
+								<img src="/contents/projects/digits-recognition/img/AI_digits_recognition.png" width="300"></a>
+								<br><br><br>
 						
 								<h3>Tableau: Natural Language Processing(NLP)</h3>
 								<p>
