--- a/contents/projects/digits-recognition/ai.html
+++ b/contents/projects/digits-recognition/ai.html
@@ -41,7 +41,41 @@
 
     <!-- CONTENT -->
 
-    <h3>Hand Written Digit Recognition</h3>
+    <h2>Hand Written Digit Recognition</h2>
+
+    <p>We can create ML model to understand digit hand writing.</p>
+
+    <table class="t1">
+      <tr>
+        <th>Topic</th>
+        <th>Details</th>
+      </tr>
+      <tr>
+        <td>Dataset</td>
+        <td>
+          MNIST Hangwritten digits
+          <br />
+          28px x 28px grayscale 65,000 images
+        </td>
+      </tr>
+      <tr>
+        <td>Model</td>
+        <td>CNNs</td>
+      </tr>
+      <tr>
+        <td>Labels</td>
+        <td>10 classes (the digits 0-9)</td>
+      </tr>
+      <tr>
+        <td>xxxx</td>
+        <td>xxxx</td>
+      </tr>
+    </table>
+
+    <p><b>:</b> <br /></p>
+
+    <h3></h3>
+    <p></p>
 
     <div class="flex-two">
       <div id="canvas_box_wrapper" class="canvas-box-wrapper">
@@ -62,10 +96,20 @@
       </div>
     </div>
 
+    <h3>References:</h3>
+
+    <p>
+      <a
+        href="https://codelabs.developers.google.com/codelabs/tfjs-training-classfication/index.html#0"
+        target="_blank"
+        >&#127760; Colab: TensorFlow.js
+      </a>
+    </p>
+
     <script src="js/digit-recognition.js"></script>
   </body>
 
-  <div style="padding-top: 10em;"></div>
+  <div style="padding-top: 3em;"></div>
 
   <!-- Ending of Content -->
   <hr />
