update content handwriting

--- a/contents/projects/digits-recognition/ai.html
+++ b/contents/projects/digits-recognition/ai.html
@@ -41,38 +41,21 @@
 
     <!-- CONTENT -->
 
-    <h2>Hand Written Digit Recognition</h2>
+    <h1>
+      <img src="./img/AI1.png" width="80" />
+    </h1>
 
-    <p>We can create ML model to understand digit hand writing.</p>
+    <h1>Hand Written Digit Recognition</h1>
+    <p><b>Topics:</b> Machine Learning to classify hangwriting image.</p>
 
-    <table class="t1">
-      <tr>
-        <th>Topic</th>
-        <th>Details</th>
-      </tr>
-      <tr>
-        <td>Dataset</td>
-        <td>
-          MNIST Hangwritten digits
-          <br />
-          28px x 28px grayscale 65,000 images
-        </td>
-      </tr>
-      <tr>
-        <td>Model</td>
-        <td>CNNs</td>
-      </tr>
-      <tr>
-        <td>Labels</td>
-        <td>10 classes (the digits 0-9)</td>
-      </tr>
-      <tr>
-        <td>xxxx</td>
-        <td>xxxx</td>
-      </tr>
-    </table>
+    <p>
+      <b>Dataset:</b> MNIST Hangwritten digits (28px x 28px grayscale 65,000
+      images)
+    </p>
 
-    <p><b>:</b> <br /></p>
+    <p><b>Model:</b> CNNs</p>
+
+    <p><b>Labels:</b> 10 classes (the digits 0-9)</p>
 
     <h3></h3>
     <p></p>
