update content digit

--- a/contents/projects/digits-recognition/ai.html
+++ b/contents/projects/digits-recognition/ai.html
@@ -52,13 +52,21 @@
       <b>Dataset:</b> MNIST Hangwritten digits (28px x 28px grayscale 65,000
       images)
     </p>
+    <a href="./img/mnist.png">
+      <img src="./img/mnist.png" width="400px" />
+    </a>
 
     <p><b>Model:</b> CNNs</p>
+    <a href="./img/cnn.png">
+      <img src="./img/cnn.png" width="400px" />
+    </a>
 
     <p><b>Labels:</b> 10 classes (the digits 0-9)</p>
+    <hr />
+    <br />
 
-    <h3></h3>
-    <p></p>
+    <h2>Testing</h2>
+    <p>Draw digit in gray area and click [Predict]</p>
 
     <div class="flex-two">
       <div id="canvas_box_wrapper" class="canvas-box-wrapper">
