update content projects

--- a/contents/projects/digits-recognition/ai.html
+++ b/contents/projects/digits-recognition/ai.html
@@ -24,10 +24,12 @@
 
       gtag("config", "G-HDYFX99SK4");
     </script>
+
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="js/chart.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest"></script>
   </head>
+
   <body>
     <!-- NAVNIGATION BAR -->
     <p style="padding: 20px;"></p>
@@ -36,7 +38,7 @@
       <a class="main" href="https://jingwora.github.io">
         <img src="/images/J_favicon/favicon.ico" width="15" />
       </a>
-      <a href="https://jingwora.github.io/contents.html">◀ CONTENTS</a>
+      <a href="https://jingwora.github.io/projects.html">◀ PROJECTS</a>
     </div>
 
     <!-- CONTENT -->
