Update content AI digit

--- a/contents/projects/digits-recognition/ai.html
+++ b/contents/projects/digits-recognition/ai.html
@@ -48,7 +48,7 @@
     </h1>
 
     <h1>Hand Written Digit Recognition</h1>
-    <p><b>Topics:</b> Machine Learning to classify hangwriting image.</p>
+    <p><b>Overview:</b> AI at the Edget to classify digit hangwriting.</p>
 
     <p>
       <b>Dataset:</b> MNIST Hangwritten digits (28px x 28px grayscale 65,000
@@ -59,15 +59,23 @@
     </a>
 
     <p><b>Model:</b> CNNs</p>
+    <p><b>Labels:</b> 10 classes (the digits 0-9)</p>
+
     <a href="./img/cnn.png">
       <img src="./img/cnn.png" width="400px" />
     </a>
+    <br />
+    <br />
 
-    <p><b>Labels:</b> 10 classes (the digits 0-9)</p>
+    <p><b>Environment:</b> Git Static site development for AI at the Edge.</p>
+    <a href="./img/AI_digits_recognition_env.png">
+      <img src="./img/AI_digits_recognition_env.png" width="400px" />
+    </a>
+
     <hr />
     <br />
 
-    <h2>Testing</h2>
+    <h2>TEST</h2>
     <p>Draw digit in gray area and click [Predict]</p>
 
     <div class="flex-two">
