update content ai digit

--- a/contents/projects/digits-recognition/ai.html
+++ b/contents/projects/digits-recognition/ai.html
@@ -75,7 +75,7 @@
     <hr />
     <br />
 
-    <h2>TEST</h2>
+    <h2>LIVE DEMO</h2>
     <p>Draw digit in gray area and click [Predict]</p>
 
     <div class="flex-two">
