--- a/skills.html
+++ b/skills.html
@@ -54,7 +54,9 @@
 						<header>
 							<div class="inner">
 								<h2>My Skill Set</h2>
-								<blockquote>"When Art Meets Science"</blockquote>
+								<br>
+								<blockquote>"My working experience in 4 key roles."</blockquote>
+								<a href="#" class="image"><img src="./contents_resources/images/skillset.png" style="width:500px;" alt="" /></a>
 							</div>
 						</header>
 
