--- a/skills.html
+++ b/skills.html
@@ -48,7 +48,6 @@
 						</div>
 					</nav>
 
-
 				<!-- Wrapper -->
 					<section id="wrapper">
 						<header>
@@ -56,7 +55,7 @@
 								<h2>My Skill Set</h2>
 								<br>
 								<blockquote>"My working experience in 4 key roles."</blockquote>
-								<a href="#" class="image"><img src="./contents_resources/images/skillset.png" style="width:300px;" alt="" /></a>
+								<img src="./contents_resources/images/skillset.png" style="width:300px;" alt="" />
 								<br><br>
 							</div>
 						</header>
@@ -69,7 +68,7 @@
 					<!-- One -->
 						<section id="one" class="wrapper spotlight style1">
 							<div class="inner">
-								<a href="#" class="image"><img src="images/data_analyst.png" style="width:150px;" alt="" /></a>
+								<img src="images/data_analyst.png" style="width:150px;" alt="" />
 								<div class="content">
 									<h2 class="major">as Data Analysis</h2>
 									<p>
@@ -84,7 +83,7 @@
 					<!-- Two -->
 						<section id="two" class="wrapper alt spotlight style2">
 							<div class="inner">
-								<a href="#" class="image"><img src="images/data_scientist.png" style="width:150px;" alt="" /></a>
+								<img src="images/data_scientist.png" style="width:150px;" alt="" />
 								<div class="content">
 									<h2 class="major">as Data Science</h2>
 									<p>
@@ -106,7 +105,7 @@
 					<!-- Three -->
 						<section id="three" class="wrapper spotlight style3">
 							<div class="inner">
-								<a href="#" class="image"><img src="images/data_engineer.png" style="width:150px;" alt="" /></a>
+								<img src="images/data_engineer.png" style="width:150px;" alt="" />
 								<div class="content">
 									<h2 class="major">as Data Engineer</h2>
 									<p>Develop ETL dataflow system in various infra-structure including on-premise, cloud, hybrid and distributed compting.</p>
@@ -119,7 +118,7 @@
 					<!-- four -->
 					<section id="two" class="wrapper alt spotlight style2">
 						<div class="inner">
-							<a href="#" class="image"><img src="images/web_developer.png" style="width:150px;" alt="" /></a>
+							<img src="images/web_developer.png" style="width:150px;" alt="" />
 							<div class="content">
 								<h2 class="major">as Web Developer</h2>
 								<p>
@@ -138,7 +137,7 @@
 					<!-- Five -->
 					<section id="three" class="wrapper spotlight style3">
 						<div class="inner">
-							<a href="#" class="image"><img src="images/cloud_engineer.png" style="width:150px;" alt="" /></a>
+							<img src="images/cloud_engineer.png" style="width:150px;" alt="" />
 							<div class="content">
 								<h2 class="major">as Cloud Engineer</h2>
 								<p>Design and build secured cloud structure to support BI and AI platform.</p>
