Add Report TQM Report

--- a/projects.html
+++ b/projects.html
@@ -100,6 +100,11 @@
 								<img src="/contents_resources/images/tableau_viz_library.png"  width="300"></a>
 								<br><br>
 
+								<h3>TQM Report: Operation Line Status</h3>
+								<a href="/contents_resources/images/TQM_report_production_line_status.png" target="_blank">
+								<img src="/contents_resources/images/TQM_report_production_line_status.png"  width="300"></a>
+								<br><br>
+
 							</div>
 						</div>
 					</section>
