--- a/skills.html
+++ b/skills.html
@@ -55,7 +55,7 @@
 								<h2>My Skill Set</h2>
 								<br>
 								<blockquote>"My working experience in 4 key roles."</blockquote>
-								<img src="./contents_resources/images/skillset.png" style="width:300px;" alt="" />
+								<img src="./contents_resources/images/skillset.png" style="width:100%;" alt="" />
 								<br><br>
 							</div>
 						</header>
