--- a/skills.html
+++ b/skills.html
@@ -109,7 +109,7 @@
 								<div class="content">
 									<h2 class="major">as Data Engineer</h2>
 									<p>Develop ETL dataflow system in various infra-structure including on-premise, cloud, hybrid and distributed compting.</p>
-									<p>SQL server, MySQL, Dataflows, Databricks </p>
+									<p>SQL server, MySQL, Data Factory, Dataflows, Databricks </p>
 									<a href="projects.html" class="special">Learn more</a>
 								</div>
 							</div>
