uplate content python env

--- a/contents.html
+++ b/contents.html
@@ -92,7 +92,7 @@
 													<tr>
 														<td>Python Clean Code</td>
 														<td>Production Python</td>
-														<td><a href="contents/articles/Python_Clean_Code.html" target="_blank">Open</a></td>
+														<td><a href="contents/articles/Python-Clean-Code.html" target="_blank">Open</a></td>
 													</tr>
 													<tr>
 														<td>Object Detection Summary</td>
@@ -146,6 +146,11 @@
 													<tr>
 														<td>Google Cloud Platform</td>
 														<td>GCP documents collection</td>
+														<td><a href="https://cloud.google.com/docs" target="_blank">Link</a></td>
+													</tr>
+													<tr>
+														<td>Python Environment</td>
+														<td>How to create python environment.</td>
 														<td><a href="https://cloud.google.com/docs" target="_blank">Link</a></td>
 													</tr>
 												</tbody>
