update content py env

--- a/contents.html
+++ b/contents.html
@@ -95,6 +95,11 @@
 														<td><a href="contents/articles/Python-Clean-Code.html" target="_blank">Open</a></td>
 													</tr>
 													<tr>
+														<td>Python Environment</td>
+														<td>How to create python environment.</td>
+														<td><a href="contents/articles/Python-Environment.html" target="_blank">Open</a></td>
+													</tr>
+													<tr>
 														<td>Object Detection Summary</td>
 														<td>Wrap-up of Object detection methods.</td>
 														<td><a href="contents/articles/Object-Detection.html" target="_blank">Open</a></td>
@@ -146,11 +151,6 @@
 													<tr>
 														<td>Google Cloud Platform</td>
 														<td>GCP documents collection</td>
-														<td><a href="https://cloud.google.com/docs" target="_blank">Link</a></td>
-													</tr>
-													<tr>
-														<td>Python Environment</td>
-														<td>How to create python environment.</td>
 														<td><a href="https://cloud.google.com/docs" target="_blank">Link</a></td>
 													</tr>
 												</tbody>
