update content production line

--- a/projects.html
+++ b/projects.html
@@ -73,15 +73,17 @@
 
 								<h3>Image Recognition: CNN</h3>
 								<p>
-									Objectives: Hangwritten digits recognition. 
+								    <b>Solution:</b> How to create AI at the Edge environment (Handwritten digits recognition). 
+									<br>
+									<b>Client:</b> Electric Appliance Manufacturer
 								 </p> 
 								<a href="/contents/projects/digits-recognition/ai.html" target="_blank">
 								<img src="/contents/projects/digits-recognition/img/AI_digits_recognition.png" width="300"></a>
 								<br><br><br>
 						
-								<h3>Tableau: Natural Language Processing(NLP)</h3>
+								<h2>Tableau: Natural Language Processing(NLP)</h2>
 								<p>
-									Objectives: Apply NLP to extract unstructured data and indentify opportunity from Service quantity KPI report. 
+									<b>Solution:</b> Apply NLP to extract unstructured data and indentify opportunity from Service quantity KPI report. 
 								 </p> 
 								<a href="https://public.tableau.com/profile/kritdikoon.woraitthinan#!/vizhome/CallCenterVoiceAnalysis/ConversationAnalysis" target="_blank">
 								<img src="/contents/projects/tableau-NLP/tableau_NLP.png" width="300"></a>
@@ -89,6 +91,18 @@
 
 								<hr>
 								<h2>BI Solutions</h2>
+
+
+
+								<h2>Operation Line Live Report</h2>
+								<p>
+								<b>Solution:</b> To understand live operation status, prevent operation disruption and accelerate PDCA cycle.
+									<br>
+									<b>Client:</b> Consumer Goods Manufacturer 
+								</p>
+								<a href="/contents_resources/images/TQM_report_production_line_status.png" target="_blank">
+								<img src="/contents_resources/images/TQM_report_production_line_status.png"  width="300"></a>
+								<br><br>
 
 								<h3>Power BI: Visualiation Library</h3> 
 								<a href="https://community.powerbi.com/t5/Data-Stories-Gallery/PowerBI-Visual-Library/td-p/998398" target="_blank">
@@ -98,13 +112,8 @@
 								<h3>Tableau: Visualiation Library</h3>
 								<a href="https://public.tableau.com/profile/kritdikoon.woraitthinan#!/vizhome/Book1_v10_4/AnalysisLibrary" target="_blank">
 								<img src="/contents_resources/images/tableau_viz_library.png"  width="300"></a>
-								<br><br>
-
-								<h3>TQM Report: Operation Line Status</h3>
-								<a href="/contents_resources/images/TQM_report_production_line_status.png" target="_blank">
-								<img src="/contents_resources/images/TQM_report_production_line_status.png"  width="300"></a>
-								<br><br>
-
+								<br><br><br>
+								
 							</div>
 						</div>
 					</section>
