Add report financial report

--- a/projects.html
+++ b/projects.html
@@ -98,10 +98,21 @@
 								<p>
 								<b>Solution:</b> To understand live operation status, prevent operation disruption and accelerate PDCA cycle.
 									<br>
-									<b>Client:</b> Consumer Goods Manufacturer 
+									<b>Client:</b> Consumer Goods Manufacturer (Business Process Improvement)
 								</p>
-								<a href="/contents_resources/images/TQM_report_production_line_status.png" target="_blank">
-								<img src="/contents_resources/images/TQM_report_production_line_status.png"  width="300"></a>
+								<a href="/contents_resources/images/production_line_analysis_report.png" target="_blank">
+								<img src="/contents_resources/images/production_line_analysis_report.png"  width="300"></a>
+								<br><br>
+
+								<h2>Financial Analysis Report</h2>
+								<p>
+								<b>Solution:</b> To support financial analysis and fiancial managment 
+								to the next level with root-cause analysis, what-if analysis and more.
+								<br>
+								<b>Client:</b> Consumer Goods Manufacturer (Business Process Improvement)
+								</p>
+								<a href="/contents_resources/images/financial_analysis_report.png" target="_blank">
+								<img src="/contents_resources/images/financial_analysis_report.png"  width="300"></a>
 								<br><br>
 
 								<h3>Power BI: Visualiation Library</h3> 
