--- a/index.html
+++ b/index.html
@@ -66,10 +66,16 @@
       <h2 class="typing">Delighted to meet you.</h2>
       <br><br>
 
-      <div style="display: flex;
+ 
+
+      <div style="
+      display: flex;
       flex-direction: column;
       align-items: center;">
-      <button onclick="document.location = 'skills.html'" style="width:80px;"> ＞ </button> 
+         <div style="display: inline-block;">
+          <button onclick="document.location = 'contacts.html'" style="width:80px;"> ＜ </button>　　　　　　　　
+          <button onclick="document.location = 'skills.html'" style="width:80px;"> ＞ </button>  
+        </div>
       </div>
 
     </div>
