--- a/skills.html
+++ b/skills.html
@@ -152,9 +152,9 @@
 					display: flex;
 					flex-direction: column;
 					align-items: center;">
-					   <dev style="display: inline-block;">
+					   <div style="display: inline-block;">
 							<button onclick="document.location = 'index.html'" style="width:80px;"> ＜ </button>　　　　　　　　<button onclick="document.location = 'projects.html'" style="width:80px;"> ＞ </button>  
-					    </dev>
+					    </div>
 					</div>
 						   
         <!-- Footer -->
