--- a/contacts.html
+++ b/contacts.html
@@ -90,9 +90,10 @@
 							display: flex;
 							flex-direction: column;
 							align-items: center;">
-							   <dev style="display: inline-block;">
-									<button onclick="document.location = 'contents.html'" style="width:80px;"> ＜ </button>　　　　　　　　<button onclick="document.location = 'index.html'" style="width:80px;"> ＞ </button>  
-								</dev>
+							   <div style="display: inline-block;">
+									<button onclick="document.location = 'contents.html'" style="width:80px;"> ＜ </button>　　　　　　　　
+									<button onclick="document.location = 'index.html'" style="width:80px;"> ＞ </button>  
+								</div>
 							</div>
 
 
