--- a/contents.html
+++ b/contents.html
@@ -263,9 +263,9 @@
 									display: flex;
 									flex-direction: column;
 									align-items: center;">
-									   <dev style="display: inline-block;">
+									   <div style="display: inline-block;">
 											<button onclick="document.location = 'projects.html'" style="width:80px;"> ＜ </button>　　　　　　　　<button onclick="document.location = 'contacts.html'" style="width:80px;"> ＞ </button>  
-										</dev>
+										</div>
 									</div>
 
         <!-- Footer -->
