--- a/index.html
+++ b/index.html
@@ -67,16 +67,23 @@
       <br><br>
 
  
-
-      <div style="
-      display: flex;
-      flex-direction: column;
-      align-items: center;">
-         <div style="display: inline-block;">
-          <button onclick="document.location = 'contacts.html'" style="width:80px;"> ＜ </button>　　　　　　　　
-          <button onclick="document.location = 'skills.html'" style="width:80px;"> ＞ </button>  
-        </div>
-      </div>
+      <div style="display: flex; flex-direction: column; align-items: center;">
+        <div style="display: inline-block;">
+          <button
+            onclick="document.location = 'contacts.html'"
+            style="width: 50px;"
+          >
+            ＜
+		  </button>
+		  
+          <button
+            onclick="document.location = 'skills.html'"
+            style="width: 50px;"
+          >
+            ＞
+          </button>
+		</div>
+	</div>
 
     </div>
 
