--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           >
             ＜
 		  </button>
-		  &nbsp; &nbsp;	
+		  &emsp; &emsp;
           <button
             onclick="document.location = 'skills.html'"
             style="width: 50px;"
