Add consumer transaction report

--- a/projects.html
+++ b/projects.html
@@ -61,12 +61,11 @@
 			<section>
 
 	<h2>Projects</h2>
-      <blockquote>"Explore power of AI and BI fusion"</blockquote>
+      <blockquote>Few of my MOCKUP of AI and BI projects.</blockquote>
 
       <!-- One -->
 
       <div class="content" style="text-align: center;">
-        <p>Few of my MOCKUP of AI and BI projects.</p>
 
         <hr />
         <h2>AI Solutions</h2>
@@ -103,6 +102,24 @@
         <hr />
         <h2>BI Solutions</h2>
 
+        <h2>Customer Transaction Analysis</h2>
+        <p>
+          <b>Solution:</b> To understand customer behaviour and needs in order to
+           increase customer loyalty while prevent churn customers.
+          <br />
+          <b>Client:</b> Consumer Goods Manufacturer (Business Process
+          Improvement)
+        </p>
+        <a
+          href="/contents_resources/images/customer_transaction_analysis.png"
+          target="_blank"
+        >
+          <img
+            src="/contents_resources/images/customer_transaction_analysis.png"
+            width="300"
+        /></a>
+        <br><br><br>
+
         <h2>Operation Line Live Report</h2>
         <p>
           <b>Solution:</b> To understand live operation status, prevent
@@ -120,7 +137,7 @@
             width="300"
         /></a>
 
-        <br /><br />
+        <br /><br /><br>
 
         <h2>Financial Analysis Report</h2>
         <p>
@@ -139,7 +156,7 @@
             width="300"
         /></a>
 
-        <br /><br />
+        <br /><br /><br>
 
         <h3>Power BI: Visualiation Library</h3>
         <a
