--- a/projects.html
+++ b/projects.html
@@ -105,10 +105,11 @@
         <h2>Customer Transaction Analysis</h2>
         <p>
           <b>Solution:</b> To understand customer behaviour and needs in order to
-           increase customer loyalty while prevent churn customers.
+           increase customer loyalty and prevent churn customers.
           <br />
-          <b>Client:</b> Consumer Goods Manufacturer (Business Process
-          Improvement)
+          <b>Use case:</b> Operational report for 
+          Marketing department of 
+          a large furniture and home decore retailer.
         </p>
         <a
           href="/contents_resources/images/customer_transaction_analysis.png"
@@ -120,13 +121,14 @@
         /></a>
         <br><br><br>
 
-        <h2>Operation Line Live Report</h2>
+        <h2>Operation Line Report</h2>
         <p>
           <b>Solution:</b> To understand live operation status, prevent
           operation disruption and accelerate PDCA cycle.
           <br />
-          <b>Client:</b> Consumer Goods Manufacturer (Business Process
-          Improvement)
+          <b>Use case:</b> Operational report for 
+          Business Improvement Department of 
+          a large printing electronic products manufacturer.
         </p>
         <a
           href="/contents_resources/images/production_line_analysis_report.png"
@@ -144,8 +146,9 @@
           <b>Solution:</b> To support financial analysis and fiancial managment
           to the next level with root-cause analysis, what-if analysis and more.
           <br />
-          <b>Client:</b> Consumer Goods Manufacturer (Business Process
-          Improvement)
+          <b>Use case:</b> Top management and operational report for 
+          Business Improvement Department 
+          of a large drugs and consumer goods manufacturer.
         </p>
         <a
           href="/contents_resources/images/financial_analysis_report.png"
