Add project BOM report

--- a/projects.html
+++ b/projects.html
@@ -55,173 +55,193 @@
     </nav>
 
     <!-- Content -->
-	<div class="wrapper">
-		<div class="inner">
+    <div class="wrapper">
+      <div class="inner">
+        <section>
+          <h2>Projects</h2>
+          <blockquote>Few of my MOCKUP of AI and BI projects.</blockquote>
 
-			<section>
+          <!-- One -->
 
-	<h2>Projects</h2>
-      <blockquote>Few of my MOCKUP of AI and BI projects.</blockquote>
+          <div class="content" style="text-align: center;">
+            <hr />
+            <h2>AI Solutions</h2>
 
-      <!-- One -->
+            <h2>Tableau: Natural Language Processing(NLP)</h2>
+            <p>
+              <b>Solution:</b> Apply NLP to extract unstructured data and
+              indentify opportunity from Service quantity KPI report.
+            </p>
+            <a
+              href="https://public.tableau.com/profile/kritdikoon.woraitthinan#!/vizhome/CallCenterVoiceAnalysis/ConversationAnalysis"
+              target="_blank"
+            >
+              <img
+                src="/contents/projects/tableau-NLP/tableau_NLP.png"
+                width="300"
+            /></a>
 
-      <div class="content" style="text-align: center;">
+            <br /><br />
 
-        <hr />
-        <h2>AI Solutions</h2>
+            <h3>Image Recognition: CNN</h3>
+            <p>
+              <b>Solution:</b> How to create AI at the Edge environment
+              (Handwritten digits recognition).
+              <br />
+              <b>Client:</b> Electric Appliance Manufacturer
+            </p>
+            <a
+              href="/contents/projects/digits-recognition/ai.html"
+              target="_blank"
+            >
+              <img
+                src="/contents/projects/digits-recognition/img/AI_digits_recognition.png"
+                width="300"
+            /></a>
 
-        <h3>Image Recognition: CNN</h3>
-        <p>
-          <b>Solution:</b> How to create AI at the Edge environment (Handwritten
-          digits recognition).
-          <br />
-          <b>Client:</b> Electric Appliance Manufacturer
-        </p>
-        <a href="/contents/projects/digits-recognition/ai.html" target="_blank">
-          <img
-            src="/contents/projects/digits-recognition/img/AI_digits_recognition.png"
-            width="300"
-        /></a>
+            <br /><br /><br />
 
-        <br /><br /><br />
+            <hr />
+            <h2>BI Solutions</h2>
 
-        <h2>Tableau: Natural Language Processing(NLP)</h2>
-        <p>
-          <b>Solution:</b> Apply NLP to extract unstructured data and indentify
-          opportunity from Service quantity KPI report.
-        </p>
-        <a
-          href="https://public.tableau.com/profile/kritdikoon.woraitthinan#!/vizhome/CallCenterVoiceAnalysis/ConversationAnalysis"
-          target="_blank"
-        >
-          <img src="/contents/projects/tableau-NLP/tableau_NLP.png" width="300"
-        /></a>
+            <h2>Customer Transaction Analysis</h2>
+            <p>
+              <b>Solution:</b> To understand customer behaviour and needs in
+              order to increase customer loyalty and prevent churn customers.
+              <br />
+              <b>Use case:</b> Operational report for Marketing department of a
+              large furniture and home decore retailer.
+            </p>
+            <a
+              href="/contents_resources/images/customer_transaction_analysis.png"
+              target="_blank"
+            >
+              <img
+                src="/contents_resources/images/customer_transaction_analysis.png"
+                width="300"
+            /></a>
+            <br /><br /><br />
 
-        <br /><br />
+            <h2>Operation Line Report</h2>
+            <p>
+              <b>Solution:</b> To understand live operation status, prevent
+              operation disruption and accelerate PDCA cycle.
+              <br />
+              <b>Use case:</b> Operational report for Business Improvement
+              Department of a large printing electronic products manufacturer.
+            </p>
+            <a
+              href="/contents_resources/images/production_line_analysis_report.png"
+              target="_blank"
+            >
+              <img
+                src="/contents_resources/images/production_line_analysis_report.png"
+                width="300"
+            /></a>
 
-        <hr />
-        <h2>BI Solutions</h2>
+            <br /><br /><br />
 
-        <h2>Customer Transaction Analysis</h2>
-        <p>
-          <b>Solution:</b> To understand customer behaviour and needs in order to
-           increase customer loyalty and prevent churn customers.
-          <br />
-          <b>Use case:</b> Operational report for 
-          Marketing department of 
-          a large furniture and home decore retailer.
-        </p>
-        <a
-          href="/contents_resources/images/customer_transaction_analysis.png"
-          target="_blank"
-        >
-          <img
-            src="/contents_resources/images/customer_transaction_analysis.png"
-            width="300"
-        /></a>
-        <br><br><br>
+            <h2>Financial Analysis Report</h2>
+            <p>
+              <b>Solution:</b> To support financial analysis and fiancial
+              managment to the next level with root-cause analysis, what-if
+              analysis and more.
+              <br />
+              <b>Use case:</b> Top management and operational report for
+              Business Improvement Department of a large drugs and consumer
+              goods manufacturer.
+            </p>
+            <a
+              href="/contents_resources/images/financial_analysis_report.png"
+              target="_blank"
+            >
+              <img
+                src="/contents_resources/images/financial_analysis_report.png"
+                width="300"
+            /></a>
 
-        <h2>Operation Line Report</h2>
-        <p>
-          <b>Solution:</b> To understand live operation status, prevent
-          operation disruption and accelerate PDCA cycle.
-          <br />
-          <b>Use case:</b> Operational report for 
-          Business Improvement Department of 
-          a large printing electronic products manufacturer.
-        </p>
-        <a
-          href="/contents_resources/images/production_line_analysis_report.png"
-          target="_blank"
-        >
-          <img
-            src="/contents_resources/images/production_line_analysis_report.png"
-            width="300"
-        /></a>
+            <br /><br /><br />
 
-        <br /><br /><br>
+            <h2>Material Management Report</h2>
+            <p>
+              <b>Solution:</b> Create Bill of material(BOM) to organize current
+              material management, improve cost control and inventory
+              optimization.
+              <br />
+              <b>Use case:</b> Operational report for Business Improvement
+              Department of a large electric medical appliance manufacturer.
+            </p>
+            <a
+              href="/contents_resources/images/financial_analysis_report.png"
+              target="_blank"
+            >
+              <img
+                src="/contents_resources/images/financial_analysis_report.png"
+                width="300"
+            /></a>
 
-        <h2>Financial Analysis Report</h2>
-        <p>
-          <b>Solution:</b> To support financial analysis and fiancial managment
-          to the next level with root-cause analysis, what-if analysis and more.
-          <br />
-          <b>Use case:</b> Top management and operational report for 
-          Business Improvement Department 
-          of a large drugs and consumer goods manufacturer.
-        </p>
-        <a
-          href="/contents_resources/images/financial_analysis_report.png"
-          target="_blank"
-        >
-          <img
-            src="/contents_resources/images/financial_analysis_report.png"
-            width="300"
-        /></a>
+            <br /><br /><br />
 
-        <br /><br /><br>
+            <h3>Power BI: Visualiation Library</h3>
+            <a
+              href="https://community.powerbi.com/t5/Data-Stories-Gallery/PowerBI-Visual-Library/td-p/998398"
+              target="_blank"
+            >
+              <img
+                src="/contents_resources/images/powerbi_viz_library.png"
+                width="300"
+            /></a>
 
-        <h3>Power BI: Visualiation Library</h3>
-        <a
-          href="https://community.powerbi.com/t5/Data-Stories-Gallery/PowerBI-Visual-Library/td-p/998398"
-          target="_blank"
-        >
-          <img
-            src="/contents_resources/images/powerbi_viz_library.png"
-            width="300"
-        /></a>
+            <br /><br />
 
-        <br /><br />
+            <h3>
+              Tableau: Visualiation Library
+            </h3>
+            <a
+              href="https://public.tableau.com/profile/kritdikoon.woraitthinan#!/vizhome/Book1_v10_4/AnalysisLibrary"
+              target="_blank"
+            >
+              <img
+                src="/contents_resources/images/tableau_viz_library.png"
+                width="300"
+            /></a>
 
-        <h3>
-          Tableau: Visualiation Library
-        </h3>
-        <a
-          href="https://public.tableau.com/profile/kritdikoon.woraitthinan#!/vizhome/Book1_v10_4/AnalysisLibrary"
-          target="_blank"
-        >
-          <img
-            src="/contents_resources/images/tableau_viz_library.png"
-            width="300"
-        /></a>
+            <br /><br /><br />
+          </div>
 
-        <br /><br /><br />
+          <!-- Button -->
+
+          <div
+            style="display: flex; flex-direction: column; align-items: center;"
+          >
+            <div style="display: inline-block;">
+              <button
+                onclick="document.location = 'skills.html'"
+                style="width: 80px;"
+              >
+                ＜
+              </button>
+              &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+              <button
+                onclick="document.location = 'contents.html'"
+                style="width: 80px;"
+              >
+                ＞
+              </button>
+            </div>
+          </div>
+        </section>
       </div>
-
-      <!-- Button -->
-
-      <div style="display: flex; flex-direction: column; align-items: center;">
-        <div style="display: inline-block;">
-          <button
-            onclick="document.location = 'skills.html'"
-            style="width: 80px;"
-          >
-            ＜
-		  </button>
-		  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-          <button
-            onclick="document.location = 'contents.html'"
-            style="width: 80px;"
-          >
-            ＞
-          </button>
-		</div>
-	</div>
-
-</section>
-</div>
-</div>
-
-
-      <!-- Footer -->
-      <section id="footer">
-        <div class="inner">
-          <ul class="copyright">
-            <li>&copy; Jingwora All rights reserved.</li>
-          </ul>
-        </div>
-      </section>
     </div>
+
+    <!-- Footer -->
+    <section id="footer">
+      <div class="inner">
+        <ul class="copyright">
+          <li>&copy; Jingwora All rights reserved.</li>
+        </ul>
+      </div>
+    </section>
 
     <!-- Scripts -->
     <script src="assets/js/jquery.min.js"></script>
