Update style card

--- a/projects.html
+++ b/projects.html
@@ -65,41 +65,48 @@
 
           <div class="content" style="text-align: center;">
             <hr />
-            <h2>AI Solutions</h2>
+            <h1>AI Solutions</h1>
 
-            <h2>Tableau: Natural Language Processing(NLP)</h2>
-            <p>
-              <b>Solution:</b> Apply NLP to extract unstructured data and
-              indentify opportunity from Service quantity KPI report.
-            </p>
-            <a
-              href="https://public.tableau.com/profile/kritdikoon.woraitthinan#!/vizhome/CallCenterVoiceAnalysis/ConversationAnalysis"
-              target="_blank"
-            >
-              <img
-                src="/contents/projects/tableau-NLP/tableau_NLP.png"
-                width="300"
-            /></a>
+            <!-- Tableau: Natural Language Processing(NLP) -->
+            <div class="card">
+              <h2>Tableau: Natural Language Processing(NLP)</h2>
+              <p>
+                <b>Solution:</b> Apply NLP to extract unstructured data and
+                indentify opportunity from Service quantity KPI report.
+              </p>
+              <a
+                href="https://public.tableau.com/profile/kritdikoon.woraitthinan#!/vizhome/CallCenterVoiceAnalysis/ConversationAnalysis"
+                target="_blank"
+              >
+                <img
+                  src="/contents/projects/tableau-NLP/tableau_NLP.png"
+                  width="300"
+              /></a>
+            </div>
 
             <br /><br />
 
-            <h3>Image Recognition: CNN</h3>
-            <p>
-              <b>Solution:</b> How to create AI at the Edge environment
-              (Handwritten digits recognition).
-              <br />
-              <b>Client:</b> Electric Appliance Manufacturer
-            </p>
-            <a
-              href="/contents/projects/digits-recognition/ai.html"
-              target="_blank"
-            >
-              <img
-                src="/contents/projects/digits-recognition/img/AI_digits_recognition.png"
-                width="300"
-            /></a>
+            <!-- Image Recognition: CNN -->
 
-            <br /><br /><br />
+            <div class="card">
+              <h2>Image Recognition: CNN</h2>
+              <p>
+                <b>Solution:</b> Develop IaaS AI .
+                <br />
+                <b>Use case:</b> AI cloud infrastructure for AI development
+                department in a large camera electric appliance manufacturer
+              </p>
+              <a
+                href="/contents/projects/digits-recognition/ai.html"
+                target="_blank"
+              >
+                <img
+                  src="/contents/projects/digits-recognition/img/AI_digits_recognition.png"
+                  width="300"
+              /></a>
+            </div>
+
+            <br />
 
             <hr />
             <h2>BI Solutions</h2>
